<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/menu_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#ECECEC"
            android:orientation="vertical">

            <TextView
                android:id="@+id/menu_game_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-1dp"
                android:text="@string/menu_game_title"
                android:textSize="16sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/menu_game_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="12sp"/>

        </LinearLayout>


        <TextView
            android:id="@+id/menu_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/menu_new" />

        <LinearLayout
            android:id="@+id/menu_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_speed" />

            <TextView
                android:id="@+id/menu_speed_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_speed_medium"
                android:textColor="@color/chess_blue"
                android:textSize="12sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/menu_achievement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/menu_achievement" />

        <TextView
            android:id="@+id/menu_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/menu_about" />

        <TextView
            android:id="@+id/menu_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/menu_exit"
            android:textColor="@color/chess_red" />

    </LinearLayout>

</ScrollView>