<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/title_chess"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCFFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/app"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.heytap.wearable.support.widget.HeyShapeButton
            android:id="@+id/title_new"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginBottom="6dp"
            android:text="@string/title_new"
            app:heyBackgroundColor="#33000000"/>

        <com.heytap.wearable.support.widget.HeyShapeButton
            android:id="@+id/title_continue"
            android:layout_width="164dp"
            android:layout_height="48dp"
            android:layout_marginBottom="6dp"
            android:text="@string/title_continue"
            app:heyBackgroundColor="#33000000"/>

        <LinearLayout
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:divider="@drawable/shape_divider_menu">

            <com.heytap.wearable.support.widget.HeyShapeButton
                android:id="@+id/title_tutorial"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:text="@string/title_tutorial"
                android:layout_weight="1"
                app:heyBackgroundColor="#33000000"/>

            <com.heytap.wearable.support.widget.HeyShapeButton
                android:id="@+id/title_menu"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:text="@string/title_menu"
                android:layout_weight="1"
                app:heyBackgroundColor="#33000000"/>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>