<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/tutorial_hint_1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:elevation="3dp"
        android:src="@drawable/shape_bg_chess_hint" />

    <ImageView
        android:id="@+id/tutorial_hint_2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:elevation="3dp"
        android:src="@drawable/shape_bg_chess_hint" />

    <LinearLayout
        android:id="@+id/tutorial_control_1"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentBottom="true"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icon_chess_blood_blue" />

        <ImageView
            android:id="@+id/tutorial_control_1_wall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/icon_chess_wall" />

        <TextView
            android:id="@+id/tutorial_control_1_blood"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tutorial_control_2"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/icon_chess_blood_red" />

        <ImageView
            android:id="@+id/tutorial_control_2_wall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/icon_chess_wall" />

        <TextView
            android:id="@+id/tutorial_control_2_blood"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tutorial_control_1"
        android:layout_below="@id/tutorial_control_2">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foreground="@drawable/shape_bg_chess"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tutorial_chess"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/tutorial_select"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_bg_select"
            android:divider="@drawable/shape_divider_menu"
            android:orientation="vertical"
            android:padding="4dp"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/tutorial_select_preview"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:padding="4dp"
                    android:src="@drawable/icon_chess_select_preview" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tutorial_select_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="4dp"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tutorial_select_preview_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0"
                        android:background="@android:color/white"
                        android:padding="4dp"
                        android:text="@string/select_preview_hint"
                        android:textColor="@android:color/black" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tutorial_select_icon_left"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:src="@drawable/icon_chess_rotation_left" />

                <ImageView
                    android:id="@+id/tutorial_select_icon_straight"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:src="@drawable/icon_chess_rotation_straight" />

                <ImageView
                    android:id="@+id/tutorial_select_icon_right"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:src="@drawable/icon_chess_rotation_right" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/shape_divider_menu"
                android:orientation="horizontal"
                android:padding="4dp"
                android:showDividers="middle">

                <TextView
                    android:id="@+id/tutorial_select_button_hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/tutorial_select_button_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_bg_select_button"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:paddingStart="4dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/select_cancel"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tutorial_select_button_ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_bg_select_button"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_horizontal"
                    android:paddingStart="4dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="4dp"
                    android:paddingBottom="4dp"
                    android:text="@string/select_ok"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tutorial_tutorial_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000"
        android:elevation="20dp"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/shape_bg_tutorial_hint"
            android:divider="@drawable/shape_divider_menu"
            android:orientation="vertical"
            android:padding="6dp"
            android:showDividers="middle">

            <TextView
                android:id="@+id/tutorial_tutorial_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tutorial_1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tutorial_tutorial_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/shape_bg_tutorial_next"
                android:paddingStart="6dp"
                android:paddingTop="3dp"
                android:paddingEnd="6dp"
                android:paddingBottom="3dp"
                android:text="@string/tutorial_next"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
